# pix-code

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
api/: pix.py
app/: __init__.py  config.py
app/api/: routes.py
app/core/: pix.py  qrgen.py
app/core/styles/: frame_styles.py  line_styles.py
app/db/: base.py
app/db/crud/: pix_crud.py
app/db/models/: __init__.py  pix_model.py  user_model.py
app/services/: pix_service.py
app/static/js/: index.js
app/templates/: 404.html
pix_app/: __init__.py
pix_app/api/: routes.py
pix_app/core/: pix.py  qrgen.py
pix_app/core/styles/: border_styles.py  marker_styles.py  qr_styler.py
pix_app/core/utils/: image_utils.py
pix_app/db/: base.py
pix_app/db/crud/: pix_crud.py
pix_app/db/models/: __init__.py  pix_model.py  user_model.py
pix_app/services/: pix_service.py
pix_app/static/css/: index.css  payment.css
pix_app/static/js/: index.js  payment.js
pix_app/templates/: 500.html  index.html  payment.html
pix_app/utils/: security.py
static/css/: custom.css
static/js/: index.js
templates/: index.html  payment.html
tests/: tests_pix.py  tests_pix_model.py  tests_request_pix.py
utils/: tests.py
