[tool.poetry]
name = "pix-code"
version = "1.0.0"
description = ""
authors = [
    "cleiton <cleiton.leonel@gmail.com>"
]
readme = "README.md"
packages = [{ include = "pix_app" }]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
flask = ">=3.1.1,<4.0.0"
qrcode = ">=8.2,<9.0"
pillow = ">=11.2.1,<12.0.0"
cairosvg = ">=2.8.2,<3.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
alembic = ">=1.16.1,<2.0.0"
bcrypt = ">=4.3.0,<5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ruff = "^0.4.4"
pre-commit = "^3.7"
gunicorn = ">=21.2.0,<22.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py39"
fix = true
exclude = ["tests", "tests/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "B", "C4", "T20", "Q"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
exclude = ["tests", "tests/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
